# backbot

./: $null  .env  .env.example  .env.test  .env.test.example  .gitignore  INTEGRATION_TEST_BRAINSTMORM.md  README.md  SUBMISSION-2.md  agent.py  cli.py  config.py  gateway.py  package.json  pyproject.toml  requirements.txt  test_sdk.py  tui.py  verify_gateway.py
.claude/: settings.local.json
.notes/: build-guide.md  context.md
agent/: __init__.py  __main__.py  agent.py  core.py  loop.py
agent/darci-go/: IMPLEMENTATION.md  README.md  go.mod  run.sh
agent/darci-python/: __init__.py  __main__.py
agent/taila2a/: ARCHITECTURE.md  README-TSA2A.md  go.mod
agent/tools/: __init__.py  calculator.py  cli.py  document.py  filesystem.py  manager.py
backend/: agent.py  intervention.py  main.py  sentinel.py  state.py  tools.py
darci/: __main__.py  config.py  run.py
darci/engineering_notebook_archive/: .scorpion-go-config-template.json  .scorpion-python-config-template.json
darci/models/: agent_context.py
darci/tools/: notebook_tools.py  register.py  sentinel_tools.py  task_tools.py  (+1 more)
engineering-notebook/: README.md
frontend/: package-lock.json  package.json
orchestrator/: __main__.py  config.py  run.py
scorpion/: .scorpion-go-config-template.json  .scorpion-python-config-template.json
tailbridge/: QWEN.md  README.md  eng_nbk.md
test_suite/: INTEGRATION_TESTING_GUIDE.md  TEST_STATUS_REPORT.md  TEST_SUITE_SUMMARY.md  run-integration-tests.ps1  run-integration-tests.sh
tests/: test_memory_assistant.py  test_new_tools.py  test_sdk.py  test_tool_calling.py
(+628 files in other folders)
